--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Hello, world.</h1>
     Hello there, awesome person!
+    <img src="https://avatars.githubusercontent.com/u/82406585?v=4">
   </body>
 </html>
