--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
   </head>
   <body>
     <h1>Hello, world.</h1>
-    Hello there, awesome person!
-    <img src="https://avatars.githubusercontent.com/u/82406585?v=4">
+    Hello there, awesome person! <br>
+    <img src="https://avatars.githubusercontent.com/u/82406585?v=4"><br>
+    <ol>
+      <li>Red</li>
+      <ul>
+        <li>roses</li>
+        <li>sunset></li>
+        <li>tomatoes</li>
+      </ul>
+      <li>Orange</li>
+      <ul>
+        <li>oranges</li>
+        <li>papayas</li>
+        <li>Monarch butterflies</li>
+      </ul>
+      <li>Yellow</li>
+      <ul>
+        <li>banana</li>
+        <li>canaries</li>
+        <li>school buses</li>
+      </ul>
+    </ol>
+        
   </body>
 </html>
