--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </ul>
       <li>Yellow</li>
       <ul>
-        <li>banana</li>
+        <li><a href="https://www.dietaryguidelines.gov/food-sources-potassium">bananas</a></li>
         <li>canaries</li>
         <li>school buses</li>
       </ul>
