--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Let's Go</title>
+    <title>Rebecca Riffle</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello, world.</h1>
@@ -10,7 +11,7 @@
       <li>Red</li>
       <ul>
         <li>roses</li>
-        <li>sunset></li>
+        <li>sunset</li>
         <li>tomatoes</li>
       </ul>
       <li>Orange</li>
