--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Let's Go</title>
@@ -5,8 +6,11 @@
   </head>
   <body>
     <h1>Hello, world.</h1>
-    Hello there, awesome person! <br>
-    <img src="https://avatars.githubusercontent.com/u/82406585?v=4"><br>
+    Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words. I am here to brush up on my <em>HTML</em> and <em>Python</em> skills to better understand <em>API Documentation</em>.<br>
+    <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
+         alt="portrait photo of a woman"
+         title="Rebecca Riffle"><br>
+    Take a look at my portfolio website <a href="RebeccaRiffle.com">here</a>
     <ol>
       <li>Red</li>
       <ul>
