--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello, world.</h1>
+    <h1>Rebecca Riffle</h1><h3>words to connect people to ideas</h3><br>
+    <div class="row">
+      <div class="column">
     Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words. I am here to brush up on my <em>HTML</em> and <em>Python</em> skills to better understand <em>API Documentation</em>.<br>
-    <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
+      </div>
+      <div class="column">
+        <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          alt="portrait photo of a woman"
-         title="Rebecca Riffle"><br>
+         title="Rebecca Riffle">
+      </div><br>
     Take a look at my portfolio website <a href="RebeccaRiffle.com">here</a>
     <ol>
       <li>Red</li>
