--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Let's Go</title>
+    <title>Rebecca Riffle's GitHub</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
