--- a/index.html
+++ b/index.html
@@ -15,27 +15,16 @@
          alt="portrait photo of a woman"
          title="Rebecca Riffle">
       </div><br>
-    Take a look at my portfolio website <a href="RebeccaRiffle.com">here</a>
-    <ol>
-      <li>Red</li>
-      <ul>
-        <li>roses</li>
-        <li>sunset</li>
-        <li>tomatoes</li>
-      </ul>
-      <li>Orange</li>
-      <ul>
-        <li>oranges</li>
-        <li>papayas</li>
-        <li>Monarch butterflies</li>
-      </ul>
-      <li>Yellow</li>
-      <ul>
-        <li><a href="https://www.dietaryguidelines.gov/food-sources-potassium">bananas</a></li>
-        <li>canaries</li>
-        <li>school buses</li>
-      </ul>
-    </ol>
-        
+      <p>Take a look at my portfolio website <a href="RebeccaRiffle.com">here</a></p>
+ 
+      <button class="accordian"I love my cats.</button>
+      <div class="pannel">
+        <p>text text text</p>
+      </div>
+            <button class="accordian"I love my cats.</button>
+      <div class="pannel">
+        <p>text text text</p>
+      </div>
+      
   </body>
 </html>
