--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rebecca Riffle's GitHub</title>
+    <title>Rebecca Riffle</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Rebecca Riffle</h1><h3>words to connect people to ideas</h3><br>
+    <h1>Rebecca Riffle</h1><br>
+    <h2>words to connect people to ideas</h2><br>
+    <div class="topnav">Testing</div>
     <div class="row">
       <div class="column">
-    Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words. I am here to brush up on my <em>HTML</em> and <em>Python</em> skills to better understand <em>API Documentation</em>.<br>
-      </div>
+    <p>Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words. <br>
+      I am here to brush up on my <em>HTML</em> and <em>Python</em> skills to better understand <em>API Documentation</em>.<br>
+        </p></div>
       <div class="column">
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          alt="portrait photo of a woman"
