--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
     <h1>Rebecca Riffle</h1><br>
     <h2>words to connect people to ideas</h2><br>
+    </header>
     <div class="topnav">Testing</div>
     <div class="row">
       <div class="column">
