--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>words to connect people to ideas</h2><br>
     </div>
     <div class="topnav">Testing</div>
-    <div class="row">
+    <div1>
       
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          alt="portrait photo of a woman"
@@ -20,7 +20,7 @@
       <div class="column2">
     <p>Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words. <br>
       I am here to brush up on my <em>HTML</em> and <em>Python</em> skills to better understand <em>API Documentation</em>.<br>
-        </p></div>
+        </p></div1>
       
             <div class="column3">
               <button class="button1">Click Here?</button>
