--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          alt="portrait photo of a woman"
-         title="Rebecca Riffle"
-         class="column1">
+         title="Rebecca Riffle">
       
       <div class="column2">
     <p>Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words. <br>
