--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p></div1>
       
             <div class="column3">
-              <button class="button1">Click Here?</button>
+              <button class="1">Click Here?</button>
       <br>
       <p>Take a look at my portfolio website <a href="RebeccaRiffle.com">here</a></p>
  
