--- a/index.html
+++ b/index.html
@@ -34,17 +34,8 @@
       <button class="purple">Click Here?</button><br>
     </div>
       <br>
-    
-    <p><center>Take a look at my portfolio website <a href="RebeccaRiffle.com">here</a></center></p>
- 
-      <button class="accordian">I love my cats.</button>
-      <div class="pannel">
-        <p>text text text</p>
-      </div>
-            <button class="accordian">I love my cats.</button>
-      <div class="pannel">
-        <p>text text text</p>
-      </div>
+<footer>footer?
+    </footer>
       
   </body>
 </html>
