--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     
-    <div class ="header">
+    <div class ="purpleheader">
     <h1>Rebecca Riffle</h1>
     <h2>words to connect people to ideas</h2><br>
     </div>
