--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <br>
       <br>
       <br>
-    <p>Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words.
-      I am here to brush up on my <em>HTML</em> and <em>Python</em> skills to better understand <em>API Documentation</em>.
+    <p>Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
+      I am here to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
         </p>
       <br>
       <br>
