--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          alt="portrait photo of a woman"
          title="Rebecca Riffle">
-      <em>Welcome to my sample webpage</em>
+      <center><em>technical writer and classical language nerd</em></center>
       <br>
     
       <br>
       <br>
       <br>
-    <p>Hello! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
+    <p>Welcome! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
       I am here to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
         </p>
       <br>
