--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="columns">
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          alt="portrait photo of a woman"
-         title="Rebecca Riffle">
+         title="Rebecca Riffle"><br>
       <center><em>technical writer and classical language nerd</em></center>
       <br>
     
