--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       <br>
       <br>
       <br>
-<div class ="footer">I'll add something classy to the footer later on. :)
+<div class ="footer">
+  <center>&#9993; RebeccaERiffle@gmail.com</center>
     </div>
       
   </body>
