--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <br>
       <br>
 <div class ="footer">
-  <center>&#9993; RebeccaERiffle@gmail.com</center>
+  <center>&#9993; RebeccaERiffle@gmail.com          &#9733; <a href="www.RebeccaRiffle.com">RebeccaRiffle.com</a></center>
     </div>
       
   </body>
