--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <br>
       <br>
     <p>Welcome! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
-      <br>I am here to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
+      <br><br>I am on <bold>GitHub</bold> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
         </p>
       <br>
       <br>
