--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       <br>
       <br>
       <br>
+    
+     <blockquote cite="https://www.thelatinlibrary.com/horace/carm3.shtml">
+Exegi monumentum aere perennius
+</blockquote> 
+    <br>
+    <br>
+    
 <div class ="footer">
   <center>&#9993; <a href="mailto:RebeccaERiffle@gmail.com">RebeccaERiffle@gmail.com</a></center>
     </div>
