--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
       <button class="purple">Button 4</button><br>
     </div>
       <br>
-      <br>
-      <br>
-      <br>
-      <br>
+
     
-     <blockquote cite="https://www.thelatinlibrary.com/horace/carm3.shtml">
+     <center?<blockquote>
 Exegi monumentum aere perennius
-</blockquote> 
+    </blockquote></center>
     <br>
     <br>
+      <br>
+      <br>
+      <br>
+      <br>
     
 <div class ="footer">
   <center>&#9993; <a href="mailto:RebeccaERiffle@gmail.com">RebeccaERiffle@gmail.com</a></center>
