--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <br>
 
     
-     <center?<blockquote>
+     <center><p class="latin">
 Exegi monumentum aere perennius
-    </blockquote></center>
+    </p></center>
     <br>
     <br>
       <br>
