--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
       <br><br>I am on <bold>GitHub</bold> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
         </p>
       <br>
-      <br>
-      <br>
-      <br>
+      <bold>Interests</bold>
+      <ul>
+        <li>instructional writing</li>
+        <li>user experience</li>
       <br>
       <br>
       
