--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <br><br>I am on <bold>GitHub</bold> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
         </p>
       <br>
-      <bold>Interests</bold>
+      <p><b>Interests</b></p>
       <ul>
         <li>instructional writing</li>
         <li>user experience</li>
