--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
          title="&#8475;ebecca Riffle"><br>
       <center><em>Technical Writer and Classical Language Nerd</em></center>
       <br>
-    
+
     <p>Welcome! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
-      <br><br>I am on <bold>GitHub</bold> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
-      <br>
+      <br><br>I am on <b>GitHub</b> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
       <p><b>Interests</b></p>
       <ul>
         <li>instructional writing</li>
