--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <p>Welcome! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
       <br><br>I am on <b>GitHub</b> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
-      <p><b>Interests</b></p>
+      <p><b>Interests</b>
       <ul>
         <li>instructional writing</li>
-        <li>user experience</li>
+        <li>user experience</li></p>
       
       <a href="https://www.RebeccaRiffle.com"><button class="purple">Portfolio site</button></a><br>
       <button class="purple">Button 2</button><br>
