--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <br>
 
     <p>Welcome! My name is <bold>Rebecca Riffle</bold> and I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
-      <br><br>I am on <b>GitHub</b> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.
+      <p>I am on <b>GitHub</b> to brush up on my <em>HTML</em> and <em>Python</em> skills so I can better understand <em>API Documentation</em>.</p>
       <p><b>Interests</b>
       <ul>
         <li>instructional writing</li>
