--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <p>Welcome! I am Rebecca Riffle. I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
       <p>I am on <b>GitHub</b> to brush up on my programming skills so I can read code more fluently and produce more effective REST API Documentation.
-      <p><b>Interests</b>
+      <p><b>Interests:</b>
       <ul>
         <li>instructional writing</li>
         <li>user experience</li></p>
-      <li>collaborative projects</li>
+      <li>interdisciplinary collaboration</li>
       
       <a href="https://www.RebeccaRiffle.com"><button class="purple">Portfolio site</button></a><br>
       <button class="purple">Button 2</button><br>
