--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <center><em>Technical Writer and Classical Language Nerd</em></center>
       <br>
 
-    <p>Welcome! I am Rebecca Riffle. I am a lifelong learner with a passion for words as a tool to help people connect to ideas that inspire them and help them grow.
+    <p>Welcome! I am Rebecca Riffle. I believe that words can help connect people to ideas that inspire them and help them grow.
       <p>I am on <b>GitHub</b> to brush up on my programming skills so I can read code more fluently and produce more effective REST API Documentation.
       <p><b>Interests:</b>
       <ul>
         <li>instructional writing</li>
-        <li>user experience</li></p>
-      <li>interdisciplinary collaboration</li>
+        <li>user experience</li>
+      <li>interdisciplinary collaboration</li></p>
       
       <a href="https://www.RebeccaRiffle.com"><button class="purple">Portfolio site</button></a><br>
       <button class="purple">Button 2</button><br>
@@ -34,7 +34,7 @@
     
 
      <center><p class="latin">
-Exegi monumentum aere perennius
+exegi monumentum aere perennius
     </p></center>
     <br>
     <br>
