--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 
     <p>Welcome! I am Rebecca Riffle. I believe that words can help connect people to ideas that inspire them and help them grow.
       <p>I am on <b>GitHub</b> to brush up on my programming skills so I can read code more fluently and produce more effective REST API Documentation.
-      <p><b>Interests:</b>
+      <p><b>Special Interests:</b>
       <ul>
+        <li>interdisciplinary collaboration</li>
         <li>instructional writing</li>
         <li>user experience</li>
-      <li>interdisciplinary collaboration</li></p>
+        <li>medical technology</li></p>
       
       <a href="https://www.RebeccaRiffle.com"><button class="purple">Portfolio site</button></a><br>
       <button class="purple">Button 2</button><br>
