--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     
     <div class ="purpleheader">
-      <center><h1>Rebecca Riffle</h1></center>
+      <h1>Rebecca Riffle</h1>
     <h2>words to connect people to ideas</h2><br>
     </div>
     
