--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          alt="portrait photo of a woman"
          title="&#8475;ebecca Riffle"><br>
-      <center><em>Technical Writer and Classical Language Nerd</em></center>
+      <p class="caption">Technical Writer and Classical Language Nerd</p>
       <br>
 
     <p>Welcome! I am Rebecca Riffle. I believe that words can help connect people to ideas that inspire them and help them grow.
