--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 
     <p>Welcome! I am Rebecca Riffle. I believe that words can help connect people to ideas that inspire them and help them grow.
       <p>I am on <b>GitHub</b> to brush up on my programming skills so I can read code more fluently and produce more effective REST API Documentation.
-      <p><b>Special Interests:</b>
+      <p><b>Special Interests:</b></p>
       <ul>
         <li>interdisciplinary collaboration</li>
         <li>instructional writing</li>
         <li>user experience</li>
-        <li>medical technology</li></p>
+        <li>medical technology</li>
+      </ul>
       
-      <a href="https://www.RebeccaRiffle.com"><button class="purple">Portfolio site</button></a><br>
+      <button class="purple"><a href="https://www.RebeccaRiffle.com">Portfolio site</a></button><br>
       <button class="purple">Button 2</button><br>
       <button class="purple">Button 3</button><br>
       <button class="purple">Button 4</button><br>
