--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <div class="columns">
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
+         class="profile"
          alt="portrait photo of a woman"
          title="&#8475;ebecca Riffle"><br>
       <p class="caption">Technical Writer and Classical Language Nerd</p>
