--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          class="profile"
          alt="portrait photo of a woman"
-         title="&#8475;ebecca Riffle"><br>
+         title="&#8475;ebecca Riffle">
       <p class="caption">Technical Writer and Classical Language Nerd</p>
       <br>
 
