--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
   <body>
     
     <div class ="purpleheader">
-      <h1>Rebecca Riffle</h1>
+      <h1>&#8475;ebecca &#8475;iffle</h1>
     <h2>words to connect people to ideas</h2><br>
     </div>
     
     <div class="columns">
+      <div class="box>
         <img src="https://avatars.githubusercontent.com/u/82406585?v=4"
          class="profile"
          alt="portrait photo of a woman"
-         title="&#8475;ebecca Riffle">
-      <p class="caption">Technical Writer and Classical Language Nerd</p>
+         title="Rebecca Riffle">
+                               <p class="caption">Technical Writer and Classical Language Nerd</p>
+                                                 </div>
       <br>
 
     <p>Welcome! I am Rebecca Riffle. I believe that words can help connect people to ideas that inspire them and help them grow.
