--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <li>medical technology</li>
       </ul>
       
-      <button class="purple"><a href="https://www.RebeccaRiffle.com">Portfolio site</a></button><br>
-      <button class="purple">Button 2</button><br>
-      <button class="purple">Button 3</button><br>
-      <button class="purple">Button 4</button><br>
+      <a class="button" href="https://www.RebeccaRiffle.com">Portfolio site</a><br>
+      <a class="button">Button 2</a><br>
+      <a class="button">Button 3</a><br>
+      <a class="button"">Button 4</a><br>
     </div>
     
 
