--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     
 
      <p class="latin">
-exegi monumentum aere perennius<br>"I have built a monument more enduring than metal"<br>-Horace, 13 BCE
+     exegi monumentum aere perennius</p><br>
+    <p class ="latintr">"I have built a monument more enduring than metal"<br>-Horace, 13 BCE
     </p>
     <br>
     <br>
