--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a class="button" href="https://www.RebeccaRiffle.com">Portfolio site</a><br>
       <a class="button">Button 2</a><br>
       <a class="button">Button 3</a><br>
-      <a class="button"">Button 4</a><br>
+      <a class="button">Button 4</a><br>
         <br>
         <br>
         <br>
